BUG FIX: horizontal scroll

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,6 +23,11 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .clearfix {zoom:1}
 .clearfix:after {
     content: '.';
